api_versioned_docs/version-12.0.0-rc1/avalonia/threading/avaloniasynchronizationcontext.mdx
---
title: 'AvaloniaSynchronizationContext'
hide_title: true
slug: '/avalonia/threading/avaloniasynchronizationcontext'
uid: 'Avalonia.Threading.AvaloniaSynchronizationContext'
commentId: 'T:Avalonia.Threading.AvaloniaSynchronizationContext'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Threading'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">AvaloniaSynchronizationContext Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Threading</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

SynchronizationContext to be used on main thread

</div>

<div className="apiref-page__signature">

```csharp
public class AvaloniaSynchronizationContext
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> SynchronizationContext <span className="apiref-page__relation-separator">-&gt;</span> AvaloniaSynchronizationContext
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [AvaloniaSynchronizationContext (3 overloads)](#uid-9eb820849c) | No summary available. |

<span id="uid-9eb820849c"></span>

### AvaloniaSynchronizationContext overloads

<section className="apiref-page__member-entry">

<span id="uid-da8ac8ab0c"></span>

#### AvaloniaSynchronizationContext Constructor

```csharp
public AvaloniaSynchronizationContext()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6054aafd69"></span>

#### AvaloniaSynchronizationContext Constructor

```csharp
public AvaloniaSynchronizationContext(Avalonia.Threading.Dispatcher dispatcher, Avalonia.Threading.DispatcherPriority priority)
```

##### Parameters

`dispatcher` [Avalonia.Threading.Dispatcher](xref:Avalonia.Threading.Dispatcher)


`priority` [Avalonia.Threading.DispatcherPriority](xref:Avalonia.Threading.DispatcherPriority)


</section>

<section className="apiref-page__member-entry">

<span id="uid-93a854fe46"></span>

#### AvaloniaSynchronizationContext Constructor

```csharp
public AvaloniaSynchronizationContext(Avalonia.Threading.DispatcherPriority priority)
```

##### Parameters

`priority` [Avalonia.Threading.DispatcherPriority](xref:Avalonia.Threading.DispatcherPriority)


</section>

## Methods

| Name | Description |
| --- | --- |
| [Ensure (2 overloads)](#uid-1ca5c5965e) | No summary available. |
| [InstallIfNeeded](#uid-43d33fdad2) | Installs synchronization context in current thread |
| [Post](#uid-f456ade104) | No summary available. |
| [Send](#uid-955eff3bfe) | No summary available. |
| [Wait](#uid-cb4f22cead) | No summary available. |

<span id="uid-1ca5c5965e"></span>

### Ensure overloads

<section className="apiref-page__member-entry">

<span id="uid-eb1fb66038"></span>

#### Ensure Method

```csharp
public Avalonia.Threading.AvaloniaSynchronizationContext.RestoreContext Ensure(Avalonia.Threading.Dispatcher dispatcher, Avalonia.Threading.DispatcherPriority priority)
```

##### Parameters

`dispatcher` [Avalonia.Threading.Dispatcher](xref:Avalonia.Threading.Dispatcher)


`priority` [Avalonia.Threading.DispatcherPriority](xref:Avalonia.Threading.DispatcherPriority)


##### Returns

[Avalonia.Threading.AvaloniaSynchronizationContext.RestoreContext](xref:Avalonia.Threading.AvaloniaSynchronizationContext.RestoreContext)


</section>

<section className="apiref-page__member-entry">

<span id="uid-3e9e9f65f8"></span>

#### Ensure Method

```csharp
public Avalonia.Threading.AvaloniaSynchronizationContext.RestoreContext Ensure(Avalonia.Threading.DispatcherPriority priority)
```

##### Parameters

`priority` [Avalonia.Threading.DispatcherPriority](xref:Avalonia.Threading.DispatcherPriority)


##### Returns

[Avalonia.Threading.AvaloniaSynchronizationContext.RestoreContext](xref:Avalonia.Threading.AvaloniaSynchronizationContext.RestoreContext)


</section>

<section className="apiref-page__member-entry">

<span id="uid-43d33fdad2"></span>

### InstallIfNeeded Method

Installs synchronization context in current thread

```csharp
public void InstallIfNeeded()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f456ade104"></span>

### Post Method

```csharp
public void Post(System.Threading.SendOrPostCallback d, object state)
```

#### Parameters

`d` System.Threading.SendOrPostCallback


`state` object


</section>

<section className="apiref-page__member-entry">

<span id="uid-955eff3bfe"></span>

### Send Method

```csharp
public void Send(System.Threading.SendOrPostCallback d, object state)
```

#### Parameters

`d` System.Threading.SendOrPostCallback


`state` object


</section>

<section className="apiref-page__member-entry">

<span id="uid-cb4f22cead"></span>

### Wait Method

```csharp
public int Wait(IntPtr[] waitHandles, bool waitAll, int millisecondsTimeout)
```

#### Parameters

`waitHandles` IntPtr[]


`waitAll` bool


`millisecondsTimeout` int


#### Returns

int


</section>

## Properties

| Name | Description |
| --- | --- |
| [AutoInstall](#uid-8a51cd6630) | Controls if SynchronizationContext should be installed in InstallIfNeeded. Used by Designer. |

<section className="apiref-page__member-entry">

<span id="uid-8a51cd6630"></span>

### AutoInstall Property

Controls if SynchronizationContext should be installed in InstallIfNeeded. Used by Designer.

```csharp
public bool AutoInstall { get; set; }
```

</section>

</ApiRefPage>

